--- a/language/nl_NL.po
+++ b/language/nl_NL.po
@@ -4,7 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Vincent <vincent@stedema.nl>, 2024
+# Vincent, 2024
+# E R, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-25 15:33-0500\n"
 "PO-Revision-Date: 2017-09-14 20:14+0000\n"
-"Last-Translator: Vincent <vincent@stedema.nl>, 2024\n"
+"Last-Translator: E R, 2024\n"
 "Language-Team: Dutch (Netherlands) (https://app.transifex.com/omeka/teams/14184/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #: view/common/mapping-sidebar.phtml:4
 msgid "Add mapping: "
-msgstr "Mapping toevoegen"
+msgstr "Mapping toevoegen:"
 
 #: view/common/options-sidebar.phtml:4
 msgid "Batch edit column options:"
@@ -76,15 +77,15 @@ msgstr ""
 
 #: view/csv-import/index/map.phtml:9
 msgid "items"
-msgstr ""
+msgstr "objecten"
 
 #: view/csv-import/index/map.phtml:10
 msgid "item sets"
-msgstr ""
+msgstr "collecties"
 
 #: view/csv-import/index/map.phtml:12
 msgid "mixed resources"
-msgstr ""
+msgstr "gemengde objecten"
 
 #: view/csv-import/index/map.phtml:13
 msgid "users"
@@ -134,7 +135,7 @@ msgstr "Kolom"
 
 #: view/csv-import/index/map.phtml:71
 msgid "Mappings"
-msgstr ""
+msgstr "Mappings"
 
 #: view/csv-import/index/map.phtml:80
 msgid "Select column"
@@ -178,7 +179,7 @@ msgstr "Ongedaan maken"
 
 #: view/csv-import/index/past-imports.phtml:24
 msgid "Action"
-msgstr ""
+msgstr "Actie"
 
 #: view/csv-import/index/past-imports.phtml:26
 msgid "Result"
@@ -187,12 +188,14 @@ msgstr "Resultaat"
 #: view/csv-import/index/past-imports.phtml:51
 #: view/csv-import/index/past-imports.phtml:86
 msgid "Job details"
-msgstr ""
+msgstr "Taakdetails"
 
 #: view/csv-import/index/past-imports.phtml:63
 msgid ""
 "Problems were detected with the import. Check the job's log for details."
 msgstr ""
+"Er zijn problemen opgetreden bij het importeren. Bekijk het taaklogboek voor"
+" meer informatie."
 
 #: view/csv-import/index/past-imports.phtml:78
 #, php-format
@@ -246,7 +249,7 @@ msgstr ""
 
 #: view/csv-import/mapping-sidebar/resource.phtml:9
 msgid "Resource template (by label)"
-msgstr ""
+msgstr "Objectsjabloon (op label)"
 
 #: view/csv-import/mapping-sidebar/resource.phtml:10
 msgid "Resource class (by term)"
